# caption-mate

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  README_zh.md  pyproject.toml
src/: main.py  mcp_server.py
src/cli/commands/: auto.py  config.py  nas.py  subtitles.py
src/core/: config.py  nas_client.py  subtitle_matcher.py  subtitle_service.py  video_analyzer.py
src/models/: subtitle.py  video.py
tests/: test.py
